--- a/src/app/gifs-trend/gifs-trend.component.html
+++ b/src/app/gifs-trend/gifs-trend.component.html
@@ -4,7 +4,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 <div class="gifs">
 <div class="gif" *ngFor="let g of gifs">
     <!-- <img src="{{g.images.original.url}}" alt="okkkk"> -->
-    <img [src]="g.images.original.url" alt="okkkk">
+    <img [src]="g.images.original.url" alt="GifIMG">
 </div>
 </div>
 </div>
