--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<!-- <h1>{{title}}</h1> -->
 <app-search-gif></app-search-gif>
+<app-entertainment></app-entertainment>
+<app-reactions></app-reactions>
+<app-sports></app-sports>
 <app-gifs-trend></app-gifs-trend>
