--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<app-search-gif></app-search-gif>
-<app-entertainment></app-entertainment>
+<!-- <app-entertainment></app-entertainment>
 <app-reactions></app-reactions>
-<app-sports></app-sports>
+<app-sports></app-sports> -->
+
+<app-navigation></app-navigation>
+<app-search-gif></app-search-gif>
+
 <app-gifs-trend></app-gifs-trend>
