--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container justify-container:center">
       <a class="navbar-brand" href="#">GiphyApp</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,6 +10,7 @@
           <a class="nav nav-link Reactions" href="#" (click)="searchreactiongifs()"><button class=" button offset">Reactions</button></a>
           <a class="nav nav-link Entertainment" href="#" (click)="searchentertainentgifs()"><button class=" button offset">Entertainment</button></a>
           <a class="nav nav-link Sports" href="#"(click)="searchsportsgifs()" ><button class=" button offset">Sports</button> </a>
+          <a class="nav nav-link " href="#" ><button class=" button offset">Favorites</button> </a>
           <a class="nav nav-link logout" href="#"><button class=" button offset">Logout</button> </a>
         </div>
       </div>
