--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,4 +5,5 @@
 <app-navigation></app-navigation>
 <app-search-gif></app-search-gif>
 
-<app-gifs-trend></app-gifs-trend>
+<!-- <app-gifs-trend></app-gifs-trend> -->
+<router-outlet></router-outlet>
