--- a/src/app/entertainment/entertainment.component.html
+++ b/src/app/entertainment/entertainment.component.html
@@ -1,14 +1,9 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <div class="container">
-<div class="row">
-    <div class="col-sm-4 Entertainmentclass" (click)="searchentertainentgifs();">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRZhxpCp0gFyl8IZllBH2u9m5x03gl7SrU6tg&usqp=CAU" alt="Card image cap">
-            <div class="card-body">
-              <p class="card-text">Entertainment</p>
-            </div>
-          </div>
-    </div>
-  </div>
+<div class="gifs">
+<div class="gif" *ngFor="let g of gifs">
+    <img [src]="g.images.original.url" alt="GifIMG">
+</div>
+</div>
 </div>
