--- a/src/app/sports/sports.component.html
+++ b/src/app/sports/sports.component.html
@@ -1,14 +1,10 @@
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
-integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <div class="container">
-<div class="row">
-    <div class="col-sm-4 Entertainmentclass" (click)="searchsportsgifs();">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://static01.nyt.com/images/2020/07/21/autossell/sports-reboot-promo-still/sports-reboot-promo-still-videoSixteenByNineJumbo1600.jpg" alt="Card image cap">
-            <div class="card-body">
-              <p class="card-text">Sports</p>
-            </div>
-          </div>
-    </div>
-  </div>
+<div class="gifs">
+<div class="gif" *ngFor="let g of gifs">
+    <!-- <img src="{{g.images.original.url}}" alt="okkkk"> -->
+    <img [src]="g.images.original.url" alt="Sports GifIMG">
+</div>
+</div>
 </div>
