--- a/src/app/gifs-trend/gifs-trend.component.css
+++ b/src/app/gifs-trend/gifs-trend.component.css
@@ -1,9 +1,24 @@
-.gifs{
+ 
+  img {
+    max-width: 100%;
+    display: block;
+    border-radius: 15px;
+  }
+  
+  figure {
+    margin: 0;
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    /* width: 1000px; */
-    margin: 10px auto;
-}
-.gif img{
-    max-width: 250px;
-}
+    grid-template-rows: 1fr auto;
+    margin-bottom: 10px;
+    break-inside: avoid;
+  }
+  
+  figure > img {
+    grid-row: 1 / -1;
+    grid-column: 1;
+  }
+  .container {
+    column-count: 4;
+    column-gap: 10px;
+  }
+  
