--- a/src/app/sports/sports.component.html
+++ b/src/app/sports/sports.component.html
@@ -1,10 +1,10 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
 integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<br>
 <div class="container">
-<div class="gifs">
-<div class="gif" *ngFor="let g of gifs">
-    <!-- <img src="{{g.images.original.url}}" alt="okkkk"> -->
-    <img [src]="g.images.original.url" alt="Sports GifIMG">
-</div>
-</div>
+    <figure *ngFor="let g of gifs">
+        <!-- <img src="{{g.images.original.url}}" alt="okkkk"> -->
+        <img [src]="g.images.original.url" alt="GifIMG">
+        <figcaption><a href="#"></a></figcaption>
+      </figure>
 </div>
