--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <app-sports></app-sports> -->
 
 <app-navigation></app-navigation>
-<app-search-gif></app-search-gif>
+<!-- <app-search-gif></app-search-gif> -->
 
 <!-- <app-gifs-trend></app-gifs-trend> -->
 <router-outlet></router-outlet>
