--- a/src/app/search-gif/search-gif.component.html
+++ b/src/app/search-gif/search-gif.component.html
@@ -1,19 +1,11 @@
-<div class="container mt-5">
-<div class="search">
-    <div class="row">
-        <div class="col-md-2">
-                <p style="font-size:30px;font-weight:400">Search Here!</p>
-        </div>
-        <div class="col-md-1">
-            <img src="https://media0.giphy.com/media/VGiAk8CLVqlFF4N2Mi/giphy.gif?cid=790b76115cfe21bd111d8bef5a467e2398577377f40749f8&rid=giphy.gif&ct=s" style="width:60px" alt="">
-        </div>
-        <div class="col-md-7">
-        <!-- <label for="search">Search Here</label> -->
-        <input type="text" class="form-control input" id="search" placeholder="Search" #gif (keyup.enter)="search(gif.value)">
-        </div>
-        <div class="col-md-1">
-            <button class="btn btn-primary" (click)="search(gif.value)">Search</button> 
-        </div>
-    </div>
+<!--  -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<div class="container">
+<div class="gifs">
+<div class="gif" *ngFor="let g of gigs">
+    <img [src]="g.images.original.url" alt="GifIMG">
 </div>
 </div>
+</div>
+<p>Sear</p>
