--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -43,11 +43,11 @@ text-decoration: none;
 
 .button {
   background: none;
-  border: 2px solid;
+  border: 1.5px solid;
   font: inherit;
   line-height: 1;
-  margin: 0.5em;
-  padding: 1em 2em;
+  margin: 0.5em 0.5em 0.5em 1em;
+  padding: 0.8em 1.2em;
 }
 .navbar{
   background-color: black;
