--- a/src/app/reactions/reactions.component.html
+++ b/src/app/reactions/reactions.component.html
@@ -1,3 +1,4 @@
+<div class="applier">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
 integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <br>
@@ -6,4 +7,5 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
         <!-- <img src="{{g.images.original.url}}" alt="okkkk"> -->
         <img [src]="g.images.original.url" alt="GifIMG">
       </figure>
+</div>
 </div>
