--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -33,3 +33,17 @@
     </div>
   </nav>
   <!-- (keyup.enter)="search(gif.value)" -->
+  <!-- <app-search-gif *ngIf="gigs.length>0"></app-search-gif> -->
+<div *ngIf="gigs.length>0" class="comunicator">
+  <div class="applier">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <br>
+    <div class="containor">
+        <figure *ngFor="let g of gigs">
+            <!-- <img src="{{g.images.original.url}}" alt="okkkk"> -->
+            <img [src]="g.images.original.url" alt="GifIMG">
+          </figure>
+    </div>
+    </div>
+</div>
