--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid justify-container:center">
-      <a class="navbar-brand" href="#"> <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--JxjnO0IM--/c_fill,f_auto,fl_progressive,h_320,q_auto,w_320/https://dev-to-uploads.s3.amazonaws.com/uploads/organization/profile_image/340/bcb3431a-a207-46bd-8fb1-447b4127accd.png" style="width: 1.5em;" alt=""> GiphyApp</a>
+      <a class="navbar-brand" href="#"> GiphyApp</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
