--- a/src/app/search-gif/search-gif.component.html
+++ b/src/app/search-gif/search-gif.component.html
@@ -19,3 +19,5 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
           </figure>
     </div>
     </div>
+
+    <app-gifs-trend *ngIf="gigs.length==0"></app-gifs-trend>
