--- a/src/app/sports/sports.component.html
+++ b/src/app/sports/sports.component.html
@@ -3,6 +3,7 @@
 integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <br>
 <div class="container">
+  <h4 style="color: #fff;">Sports Gifs</h4>
     <figure *ngFor="let g of gifs">
         <!-- <img src="{{g.images.original.url}}" alt="okkkk"> -->
         <img [src]="g.images.original.url" alt="GifIMG">
