--- a/src/app/search-gif/search-gif.component.html
+++ b/src/app/search-gif/search-gif.component.html
@@ -13,6 +13,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 <div class="applier">
     <br>
     <div class="container">
+      <h4 *ngIf="gigs.length>0" style="color: #fff;">Search Results</h4>
         <figure *ngFor="let g of gigs">
             <!-- <img src="{{g.images.original.url}}" alt="okkkk"> -->
             <img [src]="g.images.original.url" alt="GifIMG">
